XO settings stored on config.

--- a/styles.css
+++ b/styles.css
@@ -224,6 +224,26 @@ Copyright (c) [Jun 2024] [OCA - https://www.youtube.com/@OCAudiophile]
       margin-left: 10px;
     }
 
+    .collapsible:after {
+      content: '\002B';
+      color: black;
+      font-weight: bold;
+      /*float: right;*/
+      margin-left: 5px;
+    }
+    
+    .active:after {
+      content: "\2212";
+    }
+    
+    .xo-content {
+      padding: 0 18px;
+      max-height: 0;
+      overflow: hidden;
+      transition: max-height 0.2s ease-out;
+      background-color: #f1f1f1;
+    }
+
     .explanation {
       margin-left: 10px;
       font-size: 0.9em;
